--- a/index.html
+++ b/index.html
@@ -19,35 +19,31 @@
     </header>
     <main>
       <div>
-        <img href="/Montoya -Family-photo.jpeg"</img>
+        <section>
+          <img href="/Montoya-Family-photo.jpeg"</img>
+        </section>
           <h2>Howdy Partner!</h2>
         <p>Welcome to my Page</p>
       </div>
       <br>
       <div>
         <h2>Intro</h2>
-        <p>I live in Birmingham, AL where 
-        <p>I am learning to be a software developer</p>
-        <p>Through this experience with Thinkful, I am hoping to...</p>
-          <ul>
-            <li>Learn how to develop apps</li>
-            <li>Be able to create projects that improve my business</li>
-            <li>Learn to work with a team to develop new products</li>
-        </ul>
+        <p>Lives in - Birmingham, AL</p>
+        <p>I am learning to be a software developer!</p>
       </div>
       <br>
       <div>
         <h2>About Me</h2>
-        <h3>Career Interests</h3>
+        <h3>Career</h3>
           <p>I am learning to be a software developer</p>
           <p>Through this experience with Thinkful, I am hoping to...</p>
             <ul>
               <li>Learn how to develop apps</li>
               <li>Be able to create projects that improve my business</li>
               <li>Learn to work with a team to develop new products</li>
-          </ul>
+           </ul>
         <h3>Personal Life</h3>
-          <p>I've been since 2017. I have a wife, Virginia, and two daughters Camille (3) and Mary (1). We love to go hiking, spend time with family, and cook authentic mexican cuisine.</p>
+          <p>I've been living in Birmingham since 2017. I have a wife, Virginia, and two daughters Camille (3) and Mary (1). We love to go hiking, spend time with family, and cook authentic mexican cuisine.</p>
           <p>When I'm not with family or working, I am usually organizing and planning cycling events, riding my bike, and building or fixing cars, bikes etc. </p>
     </main>
   </body>
