--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
       </div>
       <br>
       <div>
+        <section>
         <h2>Intro</h2>
         <p>Lives in - Birmingham, AL</p>
         <p>I am learning to be a software developer!</p>
+        </section>
       </div>
       <br>
       <div>
-        <h2>About Me</h2>
-        <h3>Career</h3>
-          <p>I am learning to be a software developer</p>
-          <p>Through this experience with Thinkful, I am hoping to...</p>
+        <section>
+          <h2>About Me</h2>
+           <h3>Career</h3>
+            <p>I am learning to be a software developer</p>
+            <p>Through this experience with Thinkful, I am hoping to...</p>
             <ul>
               <li>Learn how to develop apps</li>
               <li>Be able to create projects that improve my business</li>
@@ -45,7 +48,20 @@
         <h3>Personal Life</h3>
           <p>I've been living in Birmingham since 2017. I have a wife, Virginia, and two daughters Camille (3) and Mary (1). We love to go hiking, spend time with family, and cook authentic mexican cuisine.</p>
           <p>When I'm not with family or working, I am usually organizing and planning cycling events, riding my bike, and building or fixing cars, bikes etc. </p>
+        </section>
+      </div>
+      <br>
+      <div>
+        <section>
+          <h2>Contact</h2>
+          <a href="#">Email Me</a>
+          <a href="#">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </section>
+      </div>
     </main>
+    <footer>
+      <a href="https://www.momentumsportz.com/">Check out this website I'm working on</a>
   </body>
 </html>
 
