--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
           <a href="#">GitHub</a>
           <a href="#">LinkedIn</a>
         </section>
+        <section>
+          <a href="https://www.momentumsportz.com/">Check out this website I'm working on</a>
+        </section>
       </div>
     </main>
     <footer>
-      <a href="https://www.momentumsportz.com/">Check out this website I'm working on</a>
+      <p>Copyright 2022 Montoya Enterprises LLC</p>
+    </footer>
   </body>
 </html>
 
