--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Alexander's Portfolio Page</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+  <!--this is where the displayed content starts-->
+  
   <body>
     <header>
       <div>
@@ -17,14 +19,17 @@
         </nav>
       </div>
     </header>
+    <!--this is the end of the header section-->
+    
     <main>
       <div>
         <section>
-          <img href="/Montoya-Family-photo.jpeg"</img>
+          <img href="https://github.com/ToyaMon/About-Me/blob/2b893e1b9e566709528a761a56b370adf76b0857/Montoya%20-Family-photo.jpeg"</img>
         </section>
           <h2>Howdy Partner!</h2>
         <p>Welcome to my Page</p>
       </div>
+      <!--this is the end of the welcome and image section-->
       <br>
       <div>
         <section>
@@ -33,6 +38,7 @@
         <p>I am learning to be a software developer!</p>
         </section>
       </div>
+      <!--this is the end of the Intro section-->
       <br>
       <div>
         <section>
@@ -50,14 +56,18 @@
           <p>When I'm not with family or working, I am usually organizing and planning cycling events, riding my bike, and building or fixing cars, bikes etc. </p>
         </section>
       </div>
+      <!--this is the end of the About Me section-->
+      
       <br>
       <div>
+        <!--are these supposed to be divided by sections?-->
         <section>
           <h2>Contact</h2>
           <a href="#">Email Me</a>
           <a href="#">GitHub</a>
           <a href="#">LinkedIn</a>
         </section>
+        <!--link to other website I've built below-->
         <section>
           <p>
           <a href="https://www.momentumsportz.com/">Check out this website I'm working on</a>
@@ -65,6 +75,7 @@
         </section>
       </div>
     </main>
+    <!--this is the beginning of the footer-->
     <footer>
       <p>Copyright 2022 Montoya Enterprises LLC</p>
     </footer>
