--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!--this is where the displayed content starts-->
   
   <body>
-    <header>
-      <div>
+    <header class="header-color">
+      <div class="wrapper">
         <h1>Alexander Montoya</h1>
         <nav>
           <a href="#">Intro</a>
@@ -76,7 +76,7 @@
       </div>
     </main>
     <!--this is the beginning of the footer-->
-    <footer>
+    <footer class="header-color">
       <p>Copyright 2022 Montoya Enterprises LLC</p>
     </footer>
   </body>
