--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     
     <main>
       <div>
-        <section>
-          <img class="img-display" href="https://github.com/ToyaMon/About-Me/blob/2b893e1b9e566709528a761a56b370adf76b0857/Montoya%20-Family-photo.jpeg"</img>
-        </section>
+          <img class="img-display" src="https://github.com/ToyaMon/About-Me/blob/2b893e1b9e566709528a761a56b370adf76b0857/Montoya%20-Family-photo.jpeg"</img>
           <h2>Howdy Partner!</h2>
         <p>Welcome to my Page</p>
       </div>
