--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     
     <main>
       <div>
-          <img class="img-display" src="https://github.com/ToyaMon/About-Me/blob/2b893e1b9e566709528a761a56b370adf76b0857/Montoya%20-Family-photo.jpeg"</img>
+          <img class="img-display"><a src="https://github.com/ToyaMon/About-Me/blob/2b893e1b9e566709528a761a56b370adf76b0857/Montoya%20-Family-photo.jpeg"</a>
+        </img>
           <h2>Howdy Partner!</h2>
         <p>Welcome to my Page</p>
       </div>
@@ -74,8 +75,10 @@
       </div>
     </main>
     <!--this is the beginning of the footer-->
-    <footer class="header-color">
+    <footer>
+      <div>
       <p>Copyright 2022 Montoya Enterprises LLC</p>
+      </div>
     </footer>
   </body>
 </html>
