--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     
     <main>
       <div>
-          <img class="img-display"><a src="https://github.com/ToyaMon/About-Me/blob/2b893e1b9e566709528a761a56b370adf76b0857/Montoya%20-Family-photo.jpeg"</a>
-        </img>
+          <img class="img-display" src="Montoya -Family-photo.jpeg">
           <h2>Howdy Partner!</h2>
         <p>Welcome to my Page</p>
       </div>
       <!--this is the end of the welcome and image section-->
       <br>
       <div>
-        <section>
+        <section class="section-format">
         <h2>Intro</h2>
         <p>Lives in - Birmingham, AL</p>
         <p>I am learning to be a software developer!</p>
@@ -40,7 +39,7 @@
       <!--this is the end of the Intro section-->
       <br>
       <div>
-        <section>
+        <section class="section-format">
           <h2>About Me</h2>
            <h3>Career</h3>
             <p>I am learning to be a software developer</p>
@@ -60,7 +59,7 @@
       <br>
       <div>
         <!--are these supposed to be divided by sections?-->
-        <section>
+        <section class="section-format">
           <h2>Contact</h2>
           <a href="#">Email Me</a>
           <a href="#">GitHub</a>
