--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <body>
     <header class="header-color">
-      <div class="wrapper">
+      <div>
         <h1>Alexander Montoya</h1>
         <nav>
           <a href="#">Intro</a>
