--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--this is where the displayed content starts-->
   
   <body>
-    <header class="header-color">
+    <header class="header-main">
       <div>
         <h1>Alexander Montoya</h1>
         <nav>
