--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div>
         <h1>Alexander Montoya</h1>
         <nav>
-          <a href="#">Intro</a>
-          <a href="#">About Me</a>
-          <a href="#">Contact</a>
+          <a href="#Intro">Intro</a>
+          <a href="#About Me">About Me</a>
+          <a href="#Contact">Contact</a>
         </nav>
       </div>
     </header>
