--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div>
           <img class="img-display" src="Montoya -Family-photo.jpeg">
           <h2>Howdy Partner!</h2>
-        <p>Welcome to my Page</p>
+        <p class="text-center">Welcome to my Page</p>
       </div>
       <!--this is the end of the welcome and image section-->
       <br>
@@ -66,7 +66,7 @@
           <a href="#">LinkedIn</a>
         </section>
         <!--link to other website I've built below-->
-        <section>
+        <section class="section-format">
           <p>
           <a href="https://www.momentumsportz.com/">Check out this website I'm working on</a>
           </p>
