--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <!--are these supposed to be divided by sections?-->
         <section class="section-format">
           <h2>Contact</h2>
-          <a href="#">Email Me</a>
-          <a href="#">GitHub</a>
-          <a href="#">LinkedIn</a>
+          <a href="mailto:alexander.manuel.montoya@gmail.com">Email Me</a>
+          <a href="https://github.com/ToyaMon">GitHub</a>
+          <a href="https://www.linkedin.com/in/alexander-montoya-69b18243/">LinkedIn</a>
         </section>
         <!--link to other website I've built below-->
-        <section class="section-format">
+        <section class="button">
           <p>
           <a href="https://www.momentumsportz.com/">Check out this website I'm working on</a>
           </p>
