--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div>
         <section class="section-format">
         <h2>Intro</h2>
-        <p>Lives in - Birmingham, AL</p>
-        <p>I am learning to be a software developer!</p>
+        <p class="text-decoration: bold">Lives in - Birmingham, AL</p>
+        <p>Excited to be starting out in web development!</p>
         </section>
       </div>
       <!--this is the end of the Intro section-->
@@ -42,7 +42,7 @@
         <section class="section-format">
           <h2>About Me</h2>
            <h3>Career</h3>
-            <p>I am learning to be a software developer</p>
+            <p class="text-width">After working in the insurance industry for four years, I have decided to learn web development and begin a new career as a newbie bitch ass coder</p>
             <p>Through this experience with Thinkful, I am hoping to...</p>
             <ul>
               <li>Learn how to develop apps</li>
@@ -50,8 +50,8 @@
               <li>Learn to work with a team to develop new products</li>
            </ul>
         <h3>Personal Life</h3>
-          <p>I've been living in Birmingham since 2017. I have a wife, Virginia, and two daughters Camille (3) and Mary (1). We love to go hiking, spend time with family, and cook authentic mexican cuisine.</p>
-          <p>When I'm not with family or working, I am usually organizing and planning cycling events, riding my bike, and building or fixing cars, bikes etc. </p>
+          <p class="text-width">I've been living in Birmingham since 2017. I have a wife, Virginia, and two daughters Camille (3) and Mary (1). We love to go hiking, spend time with family, and cook authentic mexican cuisine.</p>
+          <p class="text-width">When I'm not with family or working, I am usually organizing and planning cycling events, riding my bike, and building or fixing cars, bikes etc. </p>
         </section>
       </div>
       <!--this is the end of the About Me section-->
