--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     <header class="header-main">
       <div>
         <h1>Alexander Montoya</h1>
-        <nav>
-          <a href="#Intro">Intro</a>
-          <a href="#About Me">About Me</a>
-          <a href="#Contact">Contact</a>
-        </nav>
       </div>
     </header>
     <!--this is the end of the header section-->
@@ -24,8 +19,8 @@
     <main>
       <div>
           <img class="img-display" src="Montoya -Family-photo.jpeg">
-          <h2>Howdy Partner!</h2>
-        <p class="text-center">Welcome to my Page</p>
+          <h2 class="color: white">Howdy Partner!</h2>
+        <p class="text-center; color:white">Welcome to my Page</p>
       </div>
       <!--this is the end of the welcome and image section-->
       <br>
@@ -61,9 +56,9 @@
         <!--are these supposed to be divided by sections?-->
         <section class="section-format">
           <h2>Contact</h2>
-          <a href="mailto:alexander.manuel.montoya@gmail.com">Email Me</a>
-          <a href="https://github.com/ToyaMon">GitHub</a>
-          <a href="https://www.linkedin.com/in/alexander-montoya-69b18243/">LinkedIn</a>
+          <a class="button" href="mailto:alexander.manuel.montoya@gmail.com">Email Me</a>
+          <a class="button" href="https://github.com/ToyaMon">GitHub</a>
+          <a class="button" href="https://www.linkedin.com/in/alexander-montoya-69b18243/">LinkedIn</a>
         </section>
         <!--link to other website I've built below-->
         <section class="button">
