--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <main>
       <div>
           <img class="img-display" src="Montoya -Family-photo.jpeg">
-          <h2 class="color: white">Howdy Partner!</h2>
-        <p class="text-center; color:white">Welcome to my Page</p>
+          <h2 class="words-white">Howdy Partner!</h2>
+            <p class="words-white">Welcome to my Page</p>
       </div>
       <!--this is the end of the welcome and image section-->
       <br>
@@ -37,7 +37,7 @@
         <section class="section-format">
           <h2>About Me</h2>
            <h3>Career</h3>
-            <p class="text-width">After working in the insurance industry for four years, I have decided to learn web development and begin a new career as a newbie bitch ass coder</p>
+            <p class="text-width">After working in the insurance industry for four years, I have decided to learn web development and begin a new career as a software developer</p>
             <p>Through this experience with Thinkful, I am hoping to...</p>
             <ul>
               <li>Learn how to develop apps</li>
@@ -53,7 +53,7 @@
       
       <br>
       <div>
-        <!--are these supposed to be divided by sections?-->
+        <!--contact buttons with links to email, github and linkedin-->
         <section class="section-format">
           <h2>Contact</h2>
           <a class="button" href="mailto:alexander.manuel.montoya@gmail.com">Email Me</a>
@@ -74,6 +74,7 @@
       <p>Copyright 2022 Montoya Enterprises LLC</p>
       </div>
     </footer>
+    <hr>
   </body>
 </html>
 
