--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <main>
       <div>
-          <img class="img-display" src="Montoya20%-Family-photo.jpeg" alt="montoya-family-photo">
+          <img class="img-display" src="Montoya-Family-photo.jpeg" alt="montoya-family-photo">
           <h2 class="words-white">Howdy Partner!</h2>
             <p class="words-white">Welcome to my Page</p>
       </div>
