--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -62,9 +62,9 @@
         </section>
         <!--link to other website I've built below-->
         <section class="button">
-          <p>
+          <h5>
           <a href="https://www.momentumsportz.com/">Check out this website I'm working on</a>
-          </p>
+          </h5>
         </section>
       </div>
     </main>
