--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div>
         <section class="section-format">
         <h2>Intro</h2>
-        <a class="font-weight: bold" href="https://www.google.com/maps/place/Birmingham,+AL/@33.5309219,-87.1303252,10z/data=!3m1!4b1!4m5!3m4!1s0x888911df5885bfd3:0x25507409eaba54ce!8m2!3d33.5185892!4d-86.8103567" alt="link-to-Bham">Lives in - Birmingham, AL>
+        <p class="font-weight: bold">Lives in - Birmingham, AL</p>
         <p>Excited to be starting out in web development!</p>
         </section>
       </div>
